# statsrat

./: README.md  introduction.md  license.txt  readme.md  setup.cfg  setup.py
documentation/: defining experiments.md  introduction.md
src/statsrat/: __init__.py  em_algorithm.py  mcmc.py  plot.py  resp_fun.py  vbayes.py
src/statsrat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
statsrat/: __init__.py  plot.py  resp_fun.py
statsrat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
statsrat/bayes_regr/: __init__.py  link.py  tausq_inv_dist.py
statsrat/decision/: __init__.py  dweight.py  utility.py
statsrat/examples/: Example 1 - simple Pavlovian simulations and plotting.ipynb  Example 2 - .ipynb  Example 3 - model fits to trial by trial data.ipynb  OATs for latent inhibition.ipynb  OATs for the IBRE (UPDATE).ipynb  __init__.py  create synthetic data for Example 3.ipynb  defining learning models.ipynb  importing behavioral data (UPDATE).ipynb  some basics.ipynb
statsrat/exemplar/: Untitled.ipynb  __init__.py  atn_update.py  lrate.py  rtrv.py  sim.py  u_ex_update.py
statsrat/expr/: __init__.py  behav_score.py  experiment.py  learn.py  oat.py  schedule.py  stage.py
statsrat/latent_cause/: Untitled.ipynb  __init__(OLD).py  __init__.py  dist.py  kernel.py  local_map.py  local_map_normal.py  local_map_vb.py  particle_filter.py  predef.py  straight_vb.py  (+1 more)
tests/: comparison datatrials_for_simulation_tests.nc  experiment_for_testing_data_import.py  experiments_for_tests.py  expr_tests.py  test_expr.py  test_model_fitting.py  test_models.py
(+994 files in other folders)
