[metadata]
name = statsrat
version = 0.0.14
author = Sam Paskewitz
author_email = sam_paskewitz@yahoo.com
description = Learning models for psychology and neuroscience.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SamPaskewitz/statsrat
project_urls =
    Bug Tracker = https://github.com/SamPaskewitz/statsrat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = statsrat
packages = find:
python_requires = >=3.6

[options.packages.find]
where = statsrat